tests/paczka1/fuzzy1/42699529.err
Error in line 1: BnqR2ta S757 8,7
Error in line 4: NPWCurVxKCl A40 7,2
Error in line 16: f69X8hkTP A40 40,6
Error in line 15: Of3 A254 77,8
Error in line 29: f69X8hkTP S757 6,8
